--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,8 +4,8 @@
   "description": "Track your habits with beautiful graphs",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#f5f5f4",
-  "theme_color": "#e7e5e4",
+  "background_color": "#faf7f5",
+  "theme_color": "#faf7f5",
   "orientation": "portrait-primary",
   "scope": "/",
   "id": "/",
